refacto: SequencedCollection method can be used